--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -5,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Douglas Smith</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="https://dietpi.tailcad0b.ts.net:3535/script.js" data-website-id="c46034de-8d0b-42eb-bde1-6f2c715b3018"></script>
+    {% if jekyll.environment == "production" %}
+        <script defer src="https://dietpi.tailcad0b.ts.net:3535/script.js" data-website-id="c46034de-8d0b-42eb-bde1-6f2c715b3018"></script>
+    {% endif %}
 </head>
 <body>
     <a href="/">
