Made a nice looking page for uncompleted pages. Also removed a test blog post that is no longer needed.

--- a/contact.html
+++ b/contact.html
@@ -26,13 +26,10 @@
     <br>
     <div class="contact">
         <div class="contact-center">
-            <div class="contact-phrase">
-                <p>Eye spy with my little I, clues that show where I lie. 🔎</p>
-            </div>
             <div class="contact-list">
-                <a href="https://bsky.app/profile/cubedhs.bsky.social">Bluesky</a>
+                <span>Find me on Bluesky: </span><a href="https://bsky.app/profile/cubedhs.bsky.social">Bluesky</a>
                 <br>
-                <a href="https://github.com/cubeDHS2017">Github</a>
+                <span>Find my projects on GitHub: </span><a href="https://github.com/cubeDHS2017">Github</a>
             </div>
         </div>
     </div>
