--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Douglas Smith</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
     {% if jekyll.environment == "production" %}
         <script defer src="https://dietpi.tailcad0b.ts.net:3535/script.js" data-website-id="c46034de-8d0b-42eb-bde1-6f2c715b3018"></script>
     {% endif %}
