--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <div class="contact">
         <div class="contact-center">
             <div class="contact-list">
-                <span>Find me on Bluesky: </span><a href="https://bsky.app/profile/cubedhs.bsky.social">Bluesky</a>
+                <!-- <span>Find me on Bluesky: </span><a href="https://bsky.app/profile/cubedhs.bsky.social">Bluesky</a> -->
                 <br>
                 <span>Find my projects on GitHub: </span><a href="https://github.com/cubeDHS2017">Github</a>
             </div>
