Adding linkedin to contact page

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,9 @@
             <div class="contact-list">
                 <!-- <span>Find me on Bluesky: </span><a href="https://bsky.app/profile/cubedhs.bsky.social">Bluesky</a> -->
                 <br>
-                <span>Find my projects on GitHub: </span><a href="https://github.com/cubeDHS2017">Github</a>
+                <span>Find my projects on <a href="https://github.com/cubeDHS2017">Github</a></span>
+		<br>
+                <span>Connect with me on <a href="https://www.linkedin.com/in/douglas-smith-7862b8347/">Linkedin</a></span>
             </div>
         </div>
     </div>
