doing some updates

--- a/about.html
+++ b/about.html
@@ -24,7 +24,9 @@
         <a href="contact.html" class="fancy-link">Contact</a>
     </div>
     <div class="brief-info">
-        <p>Coming Soon</p>
+        <p>I am currently a freshman in college studyin Business and Information Technology.</p>
+        <p>I have many hobbies but some of them are running, piano, and of of course all things computers. I enjoy learning about different technologies. My favorite way to play with software and test things is inside my homelab. I selfhost many applications myself as a hobby.</p>
+	<p>As far as my plans in the future. I don't currently know the job I am going to have./p>
     </div>
 </body>
 </html>
