--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <div class="brief-info">
         <p>I am currently a freshman in college studyin Business and Information Technology.</p>
         <p>I have many hobbies but some of them are running, piano, and of of course all things computers. I enjoy learning about different technologies. My favorite way to play with software and test things is inside my homelab. I selfhost many applications myself as a hobby.</p>
-	<p>As far as my plans in the future. I don't currently know the job I am going to have./p>
+	<p>As far as my plans in the future.</p>
     </div>
 </body>
 </html>
