--- a/index.html
+++ b/index.html
@@ -30,3 +30,7 @@
     </div>
 </body>
 </html>
+
+<script>
+console.log("I knew someone would find this. Look for some more easter eggs through out the rest of my site.");
+</script>
