--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <div class="site-links">
         <a href="about.html" class="fancy-link">About</a>
         <a href="blog.html" class="fancy-link">Blog</a>
-        <a href="uses.html" class="fancy-link">Uses</a>
+        <a href="/uses" class="fancy-link">Uses</a>
         <a href="contact.html" class="fancy-link">Contact</a>
     </div>
     <br>
